Se crea pantalla inicial de inventario y se crea conexión para registro de nuevos productos en la tabla producto

--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Login node sql</title>
+    <title>UltimatePOS</title>
     
     <!-- Tailwind CSS Link -->
     <link rel="stylesheet" 
@@ -29,6 +29,9 @@
             </li>
             <li class="nav-item px 4">
                 <a href="/registroCliente" class="bg-blue-300 nav-link font-semibold border-2 hover:bg-green-700 py-3 px-4 rounded-md">Registrar cliente</a>
+            </li>
+            <li class="nav-item px 4">
+                <a href="/inventario" class="bg-blue-300 nav-link font-semibold border-2 hover:bg-green-700 py-3 px-4 rounded-md">Inventario</a>
             </li>
         </ul>
     </nav>
