se adiciona menu inicial y con botones para ingresar a las demas pantallas y en las pantallas se quita el ingreso a otras pantallas

--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -23,18 +23,8 @@
         </div>
         <ul class="w-1/2 px-16 ml-auto flex justify-end pt-1">
             <li class="nav-item px 4">
-                <a href="/login" class="bg-blue-300 nav-link font-semibold border-2 hover:bg-green-700 py-3 px-4 rounded-md">Login</a>
+                <a href="/login" class="bg-blue-300 nav-link font-semibold border-2 hover:bg-green-700 py-3 px-4 rounded-md">Salir</a>
             </li>
-            <li class="nav-item px 4">
-                <a href="/registroCajero" class="bg-blue-300 nav-link font-semibold border-2 hover:bg-green-700 py-3 px-4 rounded-md">Registrar cajero</a>
-            </li>
-            <li class="nav-item px 4">
-                <a href="/registroCliente" class="bg-blue-300 nav-link font-semibold border-2 hover:bg-green-700 py-3 px-4 rounded-md">Registrar cliente</a>
-            </li>
-            <li class="nav-item px 4">
-                <a href="/inventario" class="bg-blue-300 nav-link font-semibold border-2 hover:bg-green-700 py-3 px-4 rounded-md">Inventario</a>
-            </li>
-
         </ul>
     </nav>
     {{{body}}}
