--- a/src/views/registro/registro-cajero.hbs
+++ b/src/views/registro/registro-cajero.hbs
@@ -19,7 +19,7 @@
         <button type="submit" class="rounded-md bg-blue-300 w-full text-lg text-white font-semibold p-2 my-3 hover:bg-green-600 focus:bg-green-700">Registrar Cajero</button>
 
         {{#if error}}
-        <p>{{error}}</p>
+        <p class="text-red-500 font-bold text-lg-3">* {{error}}</p>
         {{/if}}
     </form>
  </div>
