se arreglan pantallas pples del front, se pone visible el menu ppal solo al hacer login

--- a/src/views/inventario/inventario.hbs
+++ b/src/views/inventario/inventario.hbs
@@ -22,6 +22,11 @@
             <p class="text-red-500 font-bold text-lg-3">* {{error}}</p>
             {{/if}}
         </form>
+        <div>
+            <li class="nav-item px 4 w-1/2 px-16 ml-auto flex justify-end pt-2  space-x-8">
+                <a href="/menu-inicial" class="bg-blue-300 nav-link font-semibold border-2 hover:bg-green-700 py-3 px-4 rounded-md">Menu</a>
+            </li>
+        </div>
     </div>
     </body>
 </html>
