--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -5,12 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>UltimatePOS</title>
-
-    
     <!-- Tailwind CSS Link -->
     <link rel="stylesheet" 
     href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.0.1/tailwind.min.css">
-
     <!-- Fontawesome Link -->
     <link href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" rel="stylesheet">
  
@@ -18,7 +15,7 @@
   <body class="bg-gray-200">
     <nav class="flex py-5 bg-blue-500 text-white px 24">
         <div class="w-1/2 px 12 mr-auto">
-            <h1 class="text-2x1 font-bold">UltimatePOS</h1>
+            <h1 class="text-2xl font-bold">UltimatePOS</h1>
             <p class=""><i>By TJC</i></p>
         </div>
         <ul class="w-1/2 px-16 ml-auto flex justify-end pt-1">
