--- a/src/views/menu/menu-inicial.hbs
+++ b/src/views/menu/menu-inicial.hbs
@@ -9,26 +9,28 @@
         <title>Menu</title>
     </head>
     <body>
-        <nav class="flex py-5 bg-blue-500 text-white px 24">   
-        <ul class="w-1/2 px-16 ml-auto flex justify-end pt-1">
-            <li class="nav-item px 4">
-                <a href="/login" class="bg-blue-300 nav-link font-semibold border-2 hover:bg-green-700 py-3 px-4 rounded-md">Login</a>
-            </li>
-            <li class="nav-item px 4">
-                <a href="/registroCajero" class="bg-blue-300 nav-link font-semibold border-2 hover:bg-green-700 py-3 px-4 rounded-md">Registrar cajero</a>
-            </li>
-            <li class="nav-item px 4">
-                <a href="/registroCliente" class="bg-blue-300 nav-link font-semibold border-2 hover:bg-green-700 py-3 px-4 rounded-md">Registrar cliente</a>
-            </li>
-            <li class="nav-item px 4">
-                <a href="/inventario" class="bg-blue-300 nav-link font-semibold border-2 hover:bg-green-700 py-3 px-4 rounded-md">Inventario</a>
-            </li>
+        <div class="block mx-auto my p-16"></div>
+        <div class="block mx-auto my p-8 bg-white w-1/3 border border-gray-200 rounded-lg shadow-lg text-gray-800">
+            <h1 class="text-xl my-30 font-bold text-center">Bienvenido a UltimatePOS</h1>
+            <h2 class="text-center font-bold  my-24 text-3xl">Menu principal</h2>
+        </div>
+        <div class="block mx-auto my p-6 bg-white w-1/3 border border-gray-200 rounded-lg shadow-lg text-gray-800">
+            <ul class="w-1/2 px-16 ml-auto flex justify-end pt-2  space-x-8">
+                <li class="nav-item px 4">
+                    <a href="/login" class="bg-blue-300 nav-link font-semibold border-2 hover:bg-green-700 py-3 px-4 rounded-md">Ventas</a>
+                </li>
+                <li class="nav-item px 8">
+                    <a href="/registroCajero" class="bg-blue-300 nav-link font-semibold border-2 hover:bg-green-700 py-3 px-4 rounded-md">Cajeros</a>
+                </li>
+                <li class="nav-item px 8">
+                    <a href="/registroCliente" class="bg-blue-300 nav-link font-semibold border-2 hover:bg-green-700 py-3 px-4 rounded-md">Clientes</a>
+                </li>
+                <li class="nav-item px 4">
+                    <a href="/inventario" class="bg-blue-300 nav-link font-semibold border-2 hover:bg-green-700 py-3 px-4 rounded-md">Inventario</a>
+                </li>
 
-        </ul>
-    </nav>
-    <div class="block mx-auto my p-8 bg-white w-1/3 border border-gray-200 rounded-lg shadow-lg text-gray-800">
-        <h1 class="text-3xl font-bold text-center">Menu principal</h1>
-    </div>
+            </ul>
+        </div>
     </body>
 </html>
 
