--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -10,7 +10,6 @@
     href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.0.1/tailwind.min.css">
     <!-- Fontawesome Link -->
     <link href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" rel="stylesheet">
- 
   </head>
   <body class="bg-gray-200">
     <nav class="flex py-5 bg-blue-500 text-white px 24">
@@ -20,7 +19,7 @@
         </div>
         <ul class="w-1/2 px-16 ml-auto flex justify-end pt-1">
             <li class="nav-item px 4">
-                <a href="/login" class="bg-blue-300 nav-link font-semibold border-2 hover:bg-green-700 py-3 px-4 rounded-md">Salir</a>
+                <a href="/logout" class="bg-blue-300 nav-link font-semibold border-2 hover:bg-green-700 py-3 px-4 rounded-md">Salir</a>
             </li>
         </ul>
     </nav>
