--- a/src/views/venta/venta.hbs
+++ b/src/views/venta/venta.hbs
@@ -13,8 +13,11 @@
     <div class="block mx-auto my p-2 bg-white w-100% border border-gray-200 rounded-lg shadow-lg text-gray-800 dislay-grid grid-cols-[2fr_1fr]">
         <form action="" method="POST" class="mt-4">
             <div class="block mx-auto my p-2 bg-white w-1/3% text-gray-800 flex justify-around ">
-                <input type="text" placeholder="Identificacion" name="identificacion" class="border border-gray-200 w-25% text-lg placeholder-gray-500 p-2 my-2 bg-gray-200 focus:bg-white">
+                <input type="text" placeholder="Identificacion" name="id_cliente" class="border border-gray-200 w-25% text-lg placeholder-gray-500 p-2 my-2 bg-gray-200 focus:bg-white" required>
                 <button class="nav-item px 4" type="submit" >
+                {{#if error}}
+                <p class="text-red-500 font-bold text-lg-3">* {{error}}</p>
+                {{/if}}
                 <a href="#" class="bg-blue-300 nav-link font-semibold border-2 hover:bg-green-700 py-3 px-4 rounded-md">Buscar</a></button> 
                 <div>
                     <label>Cliente: </label>
