--- a/src/views/login/index.hbs
+++ b/src/views/login/index.hbs
@@ -12,7 +12,7 @@
  <div class="block mx-auto my p-8 bg-white w-1/3 border border-gray-200 rounded-lg shadow-lg text-gray-800">
     <h1 class="text-3xl font-bold text-center">Login</h1>
     <form action="" method="POST" class="mt-4">
-        <input type="text" name="identificacion" placeholder="Identificacion" class="border border-gray-200 w-full text-lg placeholder-gray-500 p-2 my-2 bg-gray-200 focus:bg-white" required>
+        <input type="text" name="identificacion" placeholder="Identificacion" autocomplete="off" autofocus class="border border-gray-200 w-full text-lg placeholder-gray-500 p-2 my-2 bg-gray-200 focus:bg-white" required>
         <input type="password" name="password" placeholder="Contraseña" class="border border-gray-200 w-full text-lg placeholder-gray-500 p-2 my-2 bg-gray-200 focus:bg-white" required>
         <button type="submit" class="rounded-md bg-blue-300 w-full text-lg text-white font-semibold p-2 my-3 hover:bg-green-600 focus:bg-green-700">Ingresar al aplicativo</button>
 
