--- a/src/views/venta/venta.hbs
+++ b/src/views/venta/venta.hbs
@@ -14,16 +14,15 @@
         <form action="" method="POST" class="mt-4">
             <div class="block mx-auto my p-2 bg-white w-1/3% text-gray-800 flex justify-around ">
                 <input type="text" placeholder="Identificacion" name="id_cliente" class="border border-gray-200 w-25% text-lg placeholder-gray-500 p-2 my-2 bg-gray-200 focus:bg-white" required>
-                <button class="nav-item px 4" type="submit" >
+                <button class="bg-blue-300 nav-link font-semibold border-2 hover:bg-green-700 py-3 px-4 rounded-md" type="submit" >Buscar</button> 
                 {{#if error}}
                 <p class="text-red-500 font-bold text-lg-3">* {{error}}</p>
                 {{/if}}
-                <a href="#" class="bg-blue-300 nav-link font-semibold border-2 hover:bg-green-700 py-3 px-4 rounded-md">Buscar</a></button> 
                 <div>
                     <label>Cliente: </label>
-                    <input disabled type="text"  name="nombre_cliente" class="border border-gray-200 w-25% text-lg placeholder-gray-500 p-2 my-2 bg-gray-200 focus:bg-white"> 
+                    <input disabled type="text"  name="nombre_cliente" value="{{cliente.Nombre}}" class="border border-gray-200 w-25% text-lg placeholder-gray-500 p-2 my-2 bg-gray-200 focus:bg-white"> 
                     <label>Cajero: </label>
-                    <input disabled type="text"  name="nombre_cajero" class="border border-gray-200 w-25% text-lg placeholder-gray-500 p-2 my-2 bg-gray-200 focus:bg-white">
+                    <input disabled type="text"  name="nombre_cajero" value="{{cajeroData.Nombre}}" class="border border-gray-200 w-25% text-lg placeholder-gray-500 p-2 my-2 bg-gray-200 focus:bg-white">
                 </div>
             </div> 
         </form>
