--- a/src/views/menu/menu-inicial.hbs
+++ b/src/views/menu/menu-inicial.hbs
@@ -11,8 +11,11 @@
     <body>
         <div class="block mx-5 my p-5"></div>
         <div class="block mx-auto my-auto bg-white w-1/3 border border-gray-200 rounded-lg shadow-lg text-gray-800">
-            <h1 class="text-xl my-30 font-bold text-center">Bienvenido a UltimatePOS</h1>
+            <h1 class="text-xl my-30 font-bold text-center">Bienvenido a UltimatePOS {{name}}</h1>
             <h2 class="text-center font-bold  my-10 text-3xl">Menu principal</h2>
+            <script>
+                console.log(session)
+            </script>
         </div>
         <div class="block mx-auto my p-6 bg-white w-1/3 border border-gray-200 rounded-lg shadow-lg text-gray-800">
             <ul class="w-auto px-16 m-8 flex justify-center pt-2  space-x-8">
