--- a/src/views/venta/venta.hbs
+++ b/src/views/venta/venta.hbs
@@ -22,7 +22,7 @@
                     <label>Cliente: </label>
                     <input disabled type="text"  name="nombre_cliente" value="{{cliente.Nombre}}" class="border border-gray-200 w-25% text-lg placeholder-gray-500 p-2 my-2 bg-gray-200 focus:bg-white"> 
                     <label>Cajero: </label>
-                    <input disabled type="text"  name="nombre_cajero" value="{{cajeroData.Nombre}}" class="border border-gray-200 w-25% text-lg placeholder-gray-500 p-2 my-2 bg-gray-200 focus:bg-white">
+                    <input disabled type="text"  name="nombre_cajero" value="{{usuario.Nombre}}" class="border border-gray-200 w-25% text-lg placeholder-gray-500 p-2 my-2 bg-gray-200 focus:bg-white">
                 </div>
             </div> 
         </form>
